# cpp_hello_world

./: CMakeLists.txt  README.md
application/printing_hello_world/: CMakeLists.txt
application/printing_hello_world/src/: main.cpp
module/utils/: CMakeLists.txt
module/utils/include/utils/: utils.hpp
module/utils/src/: utils.cpp
